--- a/package.json
+++ b/package.json
@@ -22,49 +22,49 @@
     "lingui:extract": "lingui extract"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^1.9.1",
-    "@eslint/js": "^9.9.0",
-    "@lingui/cli": "^4.11.3",
+    "@eslint-react/eslint-plugin": "^1.14.0",
+    "@eslint/js": "^9.10.0",
+    "@lingui/cli": "^4.11.4",
     "@lingui/swc-plugin": "^4.0.8",
-    "@lingui/vite-plugin": "^4.11.3",
+    "@lingui/vite-plugin": "^4.11.4",
     "@mdx-js/rollup": "^3.0.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/chrome": "^0.0.270",
     "@types/eslint__js": "^8.42.3",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.2.0",
+    "@types/node": "^22.5.4",
     "@types/randomstring": "^1.3.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "eslint": "^9.9.0",
-    "eslint-config-flat-gitignore": "^0.1.8",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint": "^9.10.0",
+    "eslint-config-flat-gitignore": "^0.3.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "prettier": "^3.3.3",
     "randomstring": "^1.3.0",
     "remark-mdx-images": "^3.0.0",
     "remark-unwrap-images": "^4.0.0",
     "rollup-preserve-directives": "^1.1.1",
-    "terser": "^5.31.5",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "8.0.1",
-    "unplugin-icons": "^0.19.2",
+    "terser": "^5.32.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "8.5.0",
+    "unplugin-icons": "^0.19.3",
     "vite-plugin-chunk-split": "^0.5.0",
-    "wxt": "^0.19.4"
+    "wxt": "^0.19.9"
   },
   "dependencies": {
-    "@iconify-json/fa6-solid": "^1.1.24",
-    "@lingui/core": "^4.11.3",
-    "@lingui/macro": "^4.11.3",
-    "@lingui/react": "^4.11.3",
-    "@mui/material": "^6.0.0-beta.5",
+    "@iconify-json/fa6-solid": "^1.2.0",
+    "@lingui/core": "^4.11.4",
+    "@lingui/macro": "^4.11.4",
+    "@lingui/react": "^4.11.4",
+    "@mui/material": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
     "compare-versions": "^6.1.1",
     "fake-parse5": "^0.0.1",
-    "material-ui-popup-state": "^5.1.2",
+    "material-ui-popup-state": "^5.3.1",
     "notistack": "^3.0.1",
     "proxy-memoize": "^3.0.1",
     "react": "^18.3.1",
@@ -74,6 +74,9 @@
     "react-redux": "^9.1.2",
     "redux-logger": "^3.0.6",
     "thu-learn-lib": "^3.2.1",
-    "wouter": "^3.3.1"
+    "wouter": "^3.3.5"
+  },
+  "resolutions": {
+    "@swc/core": "1.5"
   }
 }
