--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "zip:firefox": "wxt zip -b firefox",
     "clean": "wxt clean",
     "postinstall": "wxt prepare",
-    "lint": "eslint .",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "check": "biome check",
     "lingui:extract": "lingui extract"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^1.14.1",
-    "@eslint/js": "^9.10.0",
+    "@biomejs/biome": "^1.9.2",
     "@lingui/cli": "^4.11.4",
     "@lingui/swc-plugin": "^4.0.10",
     "@lingui/vite-plugin": "^4.11.4",
@@ -31,7 +29,6 @@
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/chrome": "^0.0.271",
-    "@types/eslint__js": "^8.42.3",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.5.5",
     "@types/randomstring": "^1.3.0",
@@ -39,17 +36,12 @@
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "eslint": "^9.10.0",
-    "eslint-config-flat-gitignore": "^0.3.0",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "prettier": "^3.3.3",
     "randomstring": "^1.3.0",
     "remark-mdx-images": "^3.0.0",
     "remark-unwrap-images": "^4.0.0",
     "rollup-preserve-directives": "^1.1.1",
     "terser": "^5.33.0",
     "typescript": "^5.6.2",
-    "typescript-eslint": "8.6.0",
     "unplugin-icons": "^0.19.3",
     "vite-plugin-chunk-split": "^0.5.0",
     "wxt": "^0.19.9"
