--- a/package.json
+++ b/package.json
@@ -21,54 +21,60 @@
     "lingui:extract": "lingui extract"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.2",
-    "@lingui/cli": "^4.11.4",
-    "@lingui/swc-plugin": "^4.0.10",
-    "@lingui/vite-plugin": "^4.11.4",
-    "@mdx-js/rollup": "^3.0.1",
+    "@biomejs/biome": "^1.9.4",
+    "@lingui/cli": "^5.2.0",
+    "@lingui/swc-plugin": "5.4.0",
+    "@lingui/vite-plugin": "^5.2.0",
+    "@mdx-js/rollup": "^3.1.0",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@types/chrome": "^0.0.271",
+    "@types/chrome": "^0.0.309",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.13.10",
     "@types/randomstring": "^1.3.0",
-    "@types/react": "^18.3.7",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/redux-logger": "^3.0.13",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "randomstring": "^1.3.0",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "randomstring": "^1.3.1",
+    "rehype-unwrap-images": "^1.0.0",
     "remark-mdx-images": "^3.0.0",
-    "remark-unwrap-images": "^4.0.0",
-    "rollup-preserve-directives": "^1.1.1",
-    "terser": "^5.33.0",
-    "typescript": "^5.6.2",
-    "unplugin-icons": "^0.19.3",
+    "rollup-preserve-directives": "^1.1.3",
+    "terser": "^5.39.0",
+    "typescript": "^5.8.2",
+    "unplugin-icons": "^22.1.0",
     "vite-plugin-chunk-split": "^0.5.0",
-    "wxt": "^0.19.9"
+    "wxt": "^0.19.29"
   },
   "dependencies": {
-    "@iconify-json/fa6-solid": "^1.2.0",
-    "@lingui/core": "^4.11.4",
-    "@lingui/macro": "^4.11.4",
-    "@lingui/react": "^4.11.4",
-    "@mui/material": "^6.1.1",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@iconify-json/fa6-solid": "^1.2.3",
+    "@lingui/core": "^5.2.0",
+    "@lingui/macro": "^5.2.0",
+    "@lingui/react": "^5.2.0",
+    "@mui/material": "^6.4.7",
+    "@reduxjs/toolkit": "^2.6.1",
     "classnames": "^2.5.1",
     "compare-versions": "^6.1.1",
     "fake-parse5": "^0.0.1",
-    "material-ui-popup-state": "^5.3.1",
-    "notistack": "^3.0.1",
+    "material-ui-popup-state": "^5.3.3",
+    "notistack": "^3.0.2",
     "proxy-memoize": "^3.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.0.13",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-iframe": "^1.8.5",
-    "react-redux": "^9.1.2",
+    "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6",
-    "thu-learn-lib": "^3.2.1",
-    "wouter": "^3.3.5"
+    "thu-learn-lib": "^4.0.0",
+    "wouter": "^3.6.0"
   },
-  "resolutions": {
-    "@swc/core": "1.7"
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@swc/core",
+      "dtrace-provider",
+      "esbuild",
+      "spawn-sync"
+    ]
   }
 }
