--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@iconify-json/fa6-solid": "^1.2.3",
     "@lingui/core": "^5.2.0",
+    "@lingui/message-utils": "^5.2.0",
     "@lingui/react": "^5.2.0",
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.1",
