--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "randomstring": "^1.3.1",
     "rehype-unwrap-images": "^1.0.0",
-    "remark-mdx-images": "^3.0.0",
     "rollup-preserve-directives": "^1.1.3",
     "terser": "^5.39.0",
     "typescript": "^5.8.2",
@@ -65,6 +64,7 @@
     "react-iframe": "^1.8.5",
     "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6",
+    "rehype-mdx-import-media": "^1.2.0",
     "thu-learn-lib": "^4.1.0",
     "wouter": "^3.6.0"
   },
