--- a/package.json
+++ b/package.json
@@ -21,52 +21,51 @@
     "lingui:extract": "lingui extract"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@lingui/cli": "^5.2.0",
-    "@lingui/swc-plugin": "5.4.0",
-    "@lingui/vite-plugin": "^5.2.0",
-    "@mdx-js/rollup": "^3.1.0",
+    "@biomejs/biome": "^2.2.2",
+    "@lingui/cli": "^5.4.1",
+    "@lingui/swc-plugin": "5.6.1",
+    "@lingui/vite-plugin": "^5.4.1",
+    "@mdx-js/rollup": "^3.1.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@types/chrome": "^0.0.309",
+    "@types/chrome": "^0.1.4",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.13.10",
+    "@types/node": "^24.3.0",
     "@types/randomstring": "^1.3.0",
-    "@types/react": "^19.0.11",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "@types/redux-logger": "^3.0.13",
-    "@vitejs/plugin-react-swc": "^3.8.0",
+    "@vitejs/plugin-react-swc": "^4.0.1",
     "randomstring": "^1.3.1",
     "rehype-unwrap-images": "^1.0.0",
     "rollup-preserve-directives": "^1.1.3",
-    "terser": "^5.39.0",
-    "typescript": "^5.8.2",
-    "unplugin-icons": "^22.1.0",
+    "terser": "^5.43.1",
+    "typescript": "^5.9.2",
+    "unplugin-icons": "^22.2.0",
     "vite-plugin-chunk-split": "^0.5.0",
-    "wxt": "^0.19.29"
+    "wxt": "^0.20.8"
   },
   "dependencies": {
-    "@iconify-json/fa6-solid": "^1.2.3",
-    "@lingui/core": "^5.2.0",
-    "@lingui/message-utils": "^5.2.0",
-    "@lingui/react": "^5.2.0",
-    "@mui/material": "^6.4.8",
-    "@reduxjs/toolkit": "^2.6.1",
+    "@iconify-json/fa6-solid": "^1.2.4",
+    "@lingui/core": "^5.4.1",
+    "@lingui/message-utils": "^5.4.1",
+    "@lingui/react": "^5.4.1",
+    "@mui/material": "^7.3.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "classnames": "^2.5.1",
     "compare-versions": "^6.1.1",
-    "fake-parse5": "^0.0.1",
-    "material-ui-popup-state": "^5.3.3",
+    "fake-parse5": "^0.0.2",
+    "material-ui-popup-state": "^5.3.6",
     "notistack": "^3.0.2",
     "proxy-memoize": "^3.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-error-boundary": "^5.0.0",
-    "react-iframe": "^1.8.5",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6",
     "rehype-mdx-import-media": "^1.2.0",
-    "thu-learn-lib": "^4.1.0",
-    "wouter": "^3.6.0"
+    "thu-learn-lib": "^4.2.1",
+    "wouter": "^3.7.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
@@ -77,5 +76,5 @@
       "spawn-sync"
     ]
   },
-  "packageManager": "pnpm@10.6.4+sha512.da3d715bfd22a9a105e6e8088cfc7826699332ded60c423b14ec613a185f1602206702ff0fe4c438cb15c979081ce4cb02568e364b15174503a63c7a8e2a5f6c"
+  "packageManager": "pnpm@10.15.1"
 }
