--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "classnames": "^2.5.1",
     "compare-versions": "^6.1.1",
     "fake-parse5": "^0.0.2",
+    "@fingerprintjs/fingerprintjs": "1.5.1",
     "material-ui-popup-state": "^5.3.6",
     "notistack": "^3.0.2",
     "proxy-memoize": "^3.0.1",
