--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "zip:chrome": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "clean": "wxt clean",
-    "postinstall": "wxt prepare",
-    "check": "biome check",
-    "lingui:extract": "lingui extract"
+    "postinstall": "wxt prepare"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
@@ -28,7 +26,6 @@
     "@mdx-js/rollup": "^3.1.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@types/chrome": "^0.1.4",
     "@types/mdx": "^2.0.13",
     "@types/node": "^24.3.0",
     "@types/randomstring": "^1.3.0",
@@ -67,15 +64,6 @@
     "rehype-mdx-import-media": "^1.2.0",
     "thu-learn-lib": "^4.2.1",
     "wouter": "^3.7.1"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@biomejs/biome",
-      "@swc/core",
-      "dtrace-provider",
-      "esbuild",
-      "spawn-sync"
-    ]
   },
   "packageManager": "pnpm@10.15.1"
 }
