--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-helper",
-  "version": "4.7.0.1",
+  "version": "4.8.0",
   "author": "Harry Chen",
   "license": "MIT",
   "private": true,
@@ -19,40 +19,41 @@
     "postinstall": "wxt prepare"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.2",
-    "@lingui/cli": "^5.4.1",
+    "@biomejs/biome": "^2.2.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@lingui/cli": "^5.5.0",
     "@lingui/swc-plugin": "5.6.1",
-    "@lingui/vite-plugin": "^5.4.1",
+    "@lingui/vite-plugin": "^5.5.0",
     "@mdx-js/rollup": "^3.1.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.3.3",
     "@types/randomstring": "^1.3.0",
-    "@types/react": "^19.1.12",
+    "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@types/redux-logger": "^3.0.13",
     "@vitejs/plugin-react-swc": "^4.0.1",
     "randomstring": "^1.3.1",
     "rehype-unwrap-images": "^1.0.0",
     "rollup-preserve-directives": "^1.1.3",
-    "terser": "^5.43.1",
+    "terser": "^5.44.0",
     "typescript": "^5.9.2",
-    "unplugin-icons": "^22.2.0",
+    "unplugin-icons": "^22.3.0",
     "vite-plugin-chunk-split": "^0.5.0",
-    "wxt": "^0.20.8"
+    "wxt": "^0.20.11"
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "1.5.1",
     "@iconify-json/fa6-solid": "^1.2.4",
-    "@lingui/core": "^5.4.1",
-    "@lingui/message-utils": "^5.4.1",
-    "@lingui/react": "^5.4.1",
-    "@mui/material": "^7.3.1",
-    "@reduxjs/toolkit": "^2.8.2",
+    "@lingui/core": "^5.5.0",
+    "@lingui/message-utils": "^5.5.0",
+    "@lingui/react": "^5.5.0",
+    "@mui/material": "^7.3.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "classnames": "^2.5.1",
     "compare-versions": "^6.1.1",
-    "fake-parse5": "^0.0.2",
     "material-ui-popup-state": "^5.3.6",
     "notistack": "^3.0.2",
     "proxy-memoize": "^3.0.1",
@@ -62,8 +63,8 @@
     "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6",
     "rehype-mdx-import-media": "^1.2.0",
-    "thu-learn-lib": "^4.2.1",
+    "thu-learn-lib": "^4.2.3",
     "wouter": "^3.7.1"
   },
-  "packageManager": "pnpm@10.15.1"
+  "packageManager": "pnpm@10.16.0"
 }
