fix build (missing parse5)

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,6 @@ onlyBuiltDependencies:
 publicHoistPattern:
   - "@lingui/conf"
 overrides:
-  entities: "^7.0.0"
-  parse5: "-"
-  parse5-htmlparser2-tree-adapter: "-"
+  entities: ^7.0.0
+  parse5: npm:fake-parse5
+  parse5-htmlparser2-tree-adapter: npm:fake-parse5
