--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "classnames": "^2.5.1",
     "compare-versions": "^6.1.1",
+    "fake-parse5": "^0.0.2",
     "material-ui-popup-state": "^5.3.6",
     "notistack": "^3.0.2",
     "proxy-memoize": "^3.0.1",
