--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "randomstring": "^1.3.1",
     "rehype-unwrap-images": "^1.0.0",
     "rollup-preserve-directives": "^1.1.3",
+    "sharp": "^0.34.3",
     "terser": "^5.44.0",
     "typescript": "^5.9.2",
     "unplugin-icons": "^22.3.0",
     "vite-plugin-chunk-split": "^0.5.0",
+    "vite-plugin-image-optimizer": "^2.0.2",
     "wxt": "^0.20.11"
   },
   "dependencies": {
