--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,7 @@ onlyBuiltDependencies:
   - spawn-sync
 
 overrides:
+  '@swc/core': ~1.13.21
   entities: ^7.0.0
   parse5: npm:fake-parse5
   parse5-htmlparser2-tree-adapter: npm:fake-parse5
